add managerAgent in the telegrambot